# prescience

./: .gitignore  README.md  pyproject.toml
src/prescience/: __init__.py  agent.py  config.py  eval.py  pipeline.py  questions.py  types.py
src/prescience/sources/: exa.py  valyu.py
techniques/: superforecasting-prompt.md  technique-01-calibration-methods.md  technique-02-aggregation-methods.md  technique-03-search-strategies.md  technique-04-reasoning-frameworks.md  technique-05-validation-and-quality.md  technique-06-error-diagnostics.md  technique-07-compute-allocation.md  technique-08-walk-forward-optimisation.md  technique-09-rl-reward-functions.md  technique-10-rl-training-data.md  technique-11-rl-algorithms.md
